--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <h2 class="visually-hidden">list of futures</h2>
                     <ul class="futures-basic">
                         <li class="futures-class">
+                            <svg class="futures-icons" width="64" height="64">
+                                <use href="./images_hw1/symbol-defs.svg#icon-antenna"></use>
+                            </svg>
                             <h3  class="futures-list">Strategy</h3>
                             <p class="futures-txt">
                                 Our goal is to identify the business
@@ -64,18 +67,27 @@
                             </p>
                         </li>
                         <li class="futures-class">
+                            <svg class="futures-icons" width="64" height="64">
+                                <use href="./images_hw1/symbol-defs.svg#icon-clock"></use>
+                            </svg>
                             <h3  class="futures-list">Punctuality</h3>
                             <p class="futures-txt">
                                 Bring the key message to the brand's audience for the best price within the shortest possible time.
                             </p>
                         </li>
                         <li class="futures-class">
+                            <svg class="futures-icons" width="64" height="64">
+                                <use href="./images_hw1/symbol-defs.svg#icon-diagram"></use>
+                            </svg>
                             <h3  class="futures-list">Diligence</h3>
                             <p class="futures-txt">
                                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                             </p>
                         </li>
                         <li class="futures-class">
+                            <svg class="futures-icons" width="64" height="64">
+                                <use href="./images_hw1/symbol-defs.svg#icon-astronaut"></use>
+                            </svg>
                             <h3  class="futures-list">Technologies</h3>
                             <p class="futures-txt">
                                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -91,32 +103,157 @@
             <div class="container">
                     <h2 class="team-title">Our Team</h2>
                     <ul class="team-list">
+
                         <li class="team-person">
                             <img src="./images_hw1/mark.jpg" alt="Mark Guerrero" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Mark Guerrero</h3>
                                 <p class="team-txt">Product Designer</p>
+                                <ul class="team-icons">
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
+                            
+                            
                         <li class="team-person">
                             <img src="./images_hw1/tom.jpg" alt="Tom Ford" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Tom Ford</h3>
                                 <p class="team-txt">Frontend Developer</p>
-                            </div>
+                                <ul class="team-icons">
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>   
                         </li>
+
                         <li class="team-person">
                             <img src="./images_hw1/camila.jpg" alt="Camila Garcia" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Camila Garcia</h3>
                                 <p class="team-txt">Marketing</p>
+                                <ul class="team-icons">
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
+
                         <li class="team-person">
                             <img src="./images_hw1/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Daniel Wilson</h3>
                                 <p class="team-txt">UI Designer</p>
+                                <ul class="team-icons">
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-person-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="person-icons" width="16" height="16">
+                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                     </ul>
@@ -130,42 +267,60 @@
                     <h2 class="portfolio-title">Our Portfolio</h2>
                     <ul class="portfolio-list">
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/bank.jpg" alt="card with banking app" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/bank.jpg" alt="card with banking app" width="360" height="300">
+                                <p class="port-cover-text"></p>
+                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Banking App</h3>
                                 <p class="port-txt">App</p>
                             </div>
                         </li>
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/payment.jpg" alt="phone with qr code" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/payment.jpg" alt="phone with qr code" width="360" height="300">
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Cashless Payment</h3>
                                 <p class="port-txt">Marketing</p>
                             </div>
                         </li>
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/meditation.jpg" alt="laptop" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/meditation.jpg" alt="laptop" width="360" height="300">
+                                <p class="port-cover-text"></p>
+                           </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Meditation App</h3>
                                 <p class="port-txt">App</p>
                             </div>
                         </li>
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/taxi.jpg" alt="inside the car" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/taxi.jpg" alt="inside the car" width="360" height="300">
+                                <p class="port-cover-text"></p>
+                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Taxi Service</h3>
                                 <p class="port-txt">Marketing</p>
                             </div>
                         </li>
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/screen.jpg" alt="phone screen with moon" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/screen.jpg" alt="phone screen with moon" width="360" height="300">
+                                <p class="port-cover-text"></p>
+                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Screen Illustrations</h3>
                                 <p class="port-txt">Design</p>
                             </div>
                         </li>
                         <li class="portfolio-item">
-                            <img class="portfolio-img" src="./images_hw1/courses.jpg" alt="girl with phone" width="360" height="300">
+                            <div class="portfolio-item-wrap">
+                                <img class="portfolio-img" src="./images_hw1/courses.jpg" alt="girl with phone" width="360" height="300">
+                                <p class="port-cover-text"></p>
+                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Online Courses</h3>
                                 <p class="port-txt">Marketing</p>
@@ -184,6 +339,39 @@
                     <p class="foot-info">
                             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>
+                </div>
+                <div class="foot-icons-media">
+                    <h2 class="foot-icons-title">Social media</h2>
+                    <ul class="foot-icons">
+                        <li class="foot-href-icons">
+                            <a class="href-icons-link" href="">
+                                <svg class="href-icons" width="16" height="16">
+                                    <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="foot-href-icons">
+                            <a class="href-icons-link" href="">
+                                <svg class="href-icons" width="16" height="16">
+                                    <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="foot-href-icons">
+                            <a class="href-icons-link" href="">
+                                <svg class="href-icons" width="16" height="16">
+                                    <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="foot-href-icons">
+                            <a class="href-icons-link" href="">
+                                <svg class="href-icons" width="16" height="16">
+                                    <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
     </footer>
 
