--- a/index.html
+++ b/index.html
@@ -113,28 +113,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -152,28 +152,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -190,28 +190,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -228,28 +228,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -346,28 +346,28 @@
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images_hw1/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images_hw1/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images_hw1/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images_hw1/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
