--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <ul class="futures-basic">
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./images_hw1/symbol-defs.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                             <h3  class="futures-list">Strategy</h3>
                             <p class="futures-txt">
@@ -68,7 +68,7 @@
                         </li>
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./images_hw1/symbol-defs.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                             <h3  class="futures-list">Punctuality</h3>
                             <p class="futures-txt">
@@ -77,7 +77,7 @@
                         </li>
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./images_hw1/symbol-defs.svg#icon-diagram"></use>
+                                <use href="./imagicons.svg#icon-diagram"></use>
                             </svg>
                             <h3  class="futures-list">Diligence</h3>
                             <p class="futures-txt">
@@ -86,7 +86,7 @@
                         </li>
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./images_hw1/symbol-defs.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                             <h3  class="futures-list">Technologies</h3>
                             <p class="futures-txt">
@@ -105,7 +105,7 @@
                     <ul class="team-list">
 
                         <li class="team-person">
-                            <img src="./images_hw1/mark.jpg" alt="Mark Guerrero" width="264" height="260">
+                            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Mark Guerrero</h3>
                                 <p class="team-txt">Product Designer</p>
@@ -113,28 +113,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -144,7 +144,7 @@
                             
                             
                         <li class="team-person">
-                            <img src="./images_hw1/tom.jpg" alt="Tom Ford" width="264" height="260">
+                            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Tom Ford</h3>
                                 <p class="team-txt">Frontend Developer</p>
@@ -152,28 +152,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
+                                                <use href=/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -182,7 +182,7 @@
                         </li>
 
                         <li class="team-person">
-                            <img src="./images_hw1/camila.jpg" alt="Camila Garcia" width="264" height="260">
+                            <img src=/camila.jpg" alt="Camila Garcia" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Camila Garcia</h3>
                                 <p class="team-txt">Marketing</p>
@@ -190,28 +190,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -220,7 +220,7 @@
                         </li>
 
                         <li class="team-person">
-                            <img src="./images_hw1/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+                            <img src=/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Daniel Wilson</h3>
                                 <p class="team-txt">UI Designer</p>
@@ -228,28 +228,28 @@
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="team-person-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="person-icons" width="16" height="16">
-                                                <use href="./images_hw1/icons.svg#icon-linkedin"></use>
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -268,7 +268,7 @@
                     <ul class="portfolio-list">
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/bank.jpg" alt="card with banking app" width="360" height="300">
+                                <img class="portfolio-img" src="./images/bank.jpg" alt="card with banking app" width="360" height="300">
                                 <p class="port-cover-text"></p>
                             </div>
                             <div class="port-list-wrap">
@@ -278,7 +278,7 @@
                         </li>
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/payment.jpg" alt="phone with qr code" width="360" height="300">
+                                <img class="portfolio-img" src="./images/payment.jpg" alt="phone with qr code" width="360" height="300">
                                 <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="port-list-wrap">
@@ -288,7 +288,7 @@
                         </li>
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/meditation.jpg" alt="laptop" width="360" height="300">
+                                <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop" width="360" height="300">
                                 <p class="port-cover-text"></p>
                            </div>
                             <div class="port-list-wrap">
@@ -298,7 +298,7 @@
                         </li>
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/taxi.jpg" alt="inside the car" width="360" height="300">
+                                <img class="portfolio-img" src="./images/taxi.jpg" alt="inside the car" width="360" height="300">
                                 <p class="port-cover-text"></p>
                             </div>
                             <div class="port-list-wrap">
@@ -308,7 +308,7 @@
                         </li>
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/screen.jpg" alt="phone screen with moon" width="360" height="300">
+                                <img class="portfolio-img" src="./images/screen.jpg" alt="phone screen with moon" width="360" height="300">
                                 <p class="port-cover-text"></p>
                             </div>
                             <div class="port-list-wrap">
@@ -318,7 +318,7 @@
                         </li>
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
-                                <img class="portfolio-img" src="./images_hw1/courses.jpg" alt="girl with phone" width="360" height="300">
+                                <img class="portfolio-img" src="./images/courses.jpg" alt="girl with phone" width="360" height="300">
                                 <p class="port-cover-text"></p>
                             </div>
                             <div class="port-list-wrap">
@@ -346,28 +346,28 @@
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/icons.svg#icon-twitter"></use>
+                                    <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="foot-href-icons">
                             <a class="href-icons-link" href="">
                                 <svg class="href-icons" width="16" height="16">
-                                    <use href="./images_hw1/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
