--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                         </li>
 
                         <li class="team-person">
-                            <img src=/camila.jpg" alt="Camila Garcia" width="264" height="260">
+                            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Camila Garcia</h3>
                                 <p class="team-txt">Marketing</p>
@@ -220,7 +220,7 @@
                         </li>
 
                         <li class="team-person">
-                            <img src=/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+                            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
                             <div class="team-person-wrap">
                                 <h3 class="team-name">Daniel Wilson</h3>
                                 <p class="team-txt">UI Designer</p>
