--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
     
             <address class="contact">
                 <ul class="contact-list">
-                    <li><a class="contact-data" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-data" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li class="contact-list-data">
+                        <a class="contact-data" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contact-data" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </address>
         </div>
@@ -77,7 +81,7 @@
                         </li>
                         <li class="futures-class">
                             <svg class="futures-icons" width="64" height="64">
-                                <use href="./images/icons.svg#icon-diagram"></use>
+                                <use href="./imagicons.svg#icon-diagram"></use>
                             </svg>
                             <h3  class="futures-list">Diligence</h3>
                             <p class="futures-txt">
