--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="contact-list-data">
                         <a class="contact-data" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li>
+                    <li class="contact-list-data">
                         <a class="contact-data" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
