--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="navigation">
                 <a class="logo-web" href="./index.html">web<span class="logo">Studio</span></a>
                 <ul class="navigation-list">
-                    <li><a class="list" href="./index.html">Studio</a></li>
+                    <li><a class="list first" href="./index.html">Studio</a></li>
                     <li><a class="list" href="">Portfolio</a></li>
                     <li><a class="list" href="">Contacts</a></li>
                 </ul>
