--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <li class="futures-class">
                             <div class="futures-icons-wrap">
                                 <svg class="futures-icons" width="64" height="64">
-                                    <use href="./imagicons.svg#icon-diagram"></use>
+                                    <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </div>
                             <h3  class="futures-list">Diligence</h3>
@@ -301,7 +301,7 @@
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
                                 <img class="portfolio-img" src="./images/meditation.jpg" alt="laptop" width="360" height="300">
-                                <p class="port-cover-text"></p>
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                            </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Meditation App</h3>
@@ -311,7 +311,7 @@
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
                                 <img class="portfolio-img" src="./images/taxi.jpg" alt="inside the car" width="360" height="300">
-                                <p class="port-cover-text"></p>
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Taxi Service</h3>
@@ -321,7 +321,7 @@
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
                                 <img class="portfolio-img" src="./images/screen.jpg" alt="phone screen with moon" width="360" height="300">
-                                <p class="port-cover-text"></p>
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Screen Illustrations</h3>
@@ -331,7 +331,7 @@
                         <li class="portfolio-item">
                             <div class="portfolio-item-wrap">
                                 <img class="portfolio-img" src="./images/courses.jpg" alt="girl with phone" width="360" height="300">
-                                <p class="port-cover-text"></p>
+                                <p class="port-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="port-list-wrap">
                                 <h3 class="port-list">Online Courses</h3>
@@ -346,13 +346,12 @@
 <!-- *================= FOOTER ======================== -->
 
     <footer class="foot">
-                <div class="container">
+                <div class="container foot-icons-media">
                     <a class="logo-web-foot">web<span class="logo-foot">Studio</span></a>
                     <p class="foot-info">
                             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                     </p>
-                </div>
-                <div class="foot-icons-media">
+                
                     <h2 class="foot-icons-title">Social media</h2>
                     <ul class="foot-icons">
                         <li class="foot-href-icons">
