--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                         </p>
                     </div>
                     <div class="foot-icons-media">
-                        <h2 class="foot-icons-title">Social media</h2>
+                        <p class="foot-icons-title">Social media</p>
                         <ul class="foot-icons">
                             <li class="foot-href-icons">
                                 <a class="href-icons-link" href="">
